# MyfirstVideoPlayer

UV2/: settings.gradle
UV2/app/: build.gradle
UV2/app/release/: output-metadata.json
UV2/app/src/androidTest/java/com/example/uv2/: ExampleInstrumentedTest.java
UV2/app/src/main/: AndroidManifest.xml
UV2/app/src/main/assets/: litepal.xml
UV2/app/src/main/cpp/: CMakeLists.txt  uv2.cpp
UV2/app/src/main/cpp/fftools/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.d  ffmpeg.h  ffprobe.d
UV2/app/src/main/cpp/include/: config.h
UV2/app/src/main/cpp/include/libavcodec/: mathops.h
UV2/app/src/main/cpp/include/libavcodec/aarch64/: fft_init_aarch64.d  fmtconvert_init.d  h264pred_init.d  hevcdsp_init_aarch64.d  idctdsp_init_aarch64.d  mpegaudiodsp_init.d  opusdsp_init.d  pixblockdsp_init_aarch64.d  sbrdsp_init_aarch64.d  synth_filter_init.d  vp9dsp_init_10bpp_aarch64.d  vp9dsp_init_12bpp_aarch64.d  vp9dsp_init_aarch64.d
UV2/app/src/main/cpp/include/libavcodec/neon/: mpegvideo.d
UV2/app/src/main/cpp/include/libavcodec/x86/: aacencdsp_init.d  ac3dsp_init.d  blockdsp_init.d  cavsdsp.d  celt_pvq_init.d  constants.d  dcadsp_init.d  dct_init.d  dnxhdenc_init.d  exrdsp_init.d  fdct.d  fdctdsp_init.d  fft_init.d  flacdsp_init.d  fmtconvert_init.d  h264_intrapred_init.d  h264_qpel.d  hevcdsp_init.d  hpeldsp_init.d  hpeldsp_vp3_init.d  huffyuvencdsp_init.d  idctdsp_init.d  lossless_videoencdsp_init.d  lpc.d  mdct15_init.d  me_cmp_init.d  mlpdsp_init.d  mpegaudiodsp.d  mpegvideo.d  mpegvideoenc.d  mpegvideoencdsp_init.d  opusdsp_init.d  pixblockdsp_init.d  pngdsp_init.d  proresdsp_init.d  rv40dsp_init.d  sbcdsp_init.d  sbrdsp_init.d  snowdsp.d  svq1enc_init.d  (+12 more)
UV2/app/src/main/cpp/include/libavutil/: ffversion.h  timer.h
UV2/app/src/main/cpp/include/libavutil/x86/: fixed_dsp_init.d  imgutils_init.d  lls_init.d  pixelutils_init.d  tx_float_init.d
UV2/app/src/main/cpp/lib/arm64-v8a/: libx264.so.164
UV2/app/src/main/java/com/example/uv2/: Adapter.java  Adapter_Big.java  Adapter_Biggest.java  FFmpegCmd.java  FlyHeartView.java  MainActivity.java  MediaPicture.java  MediaVideo.java  RoundImage.java  SettingActivity.java  ShowFull.java  ShowVideo.java  TagVideo.java
UV2/app/src/main/java/com/example/uv2/adapter/: Adapter.java  FormalAdapter.java  IFinishAdapter.java  IModelAdapter.java  IPresenterAdapter.java  IViewAdapter.java  ModelAdapter.java  PresenterAdapter.java
UV2/app/src/main/java/com/example/uv2/bigadapter/: BigAdapter.java  IFinishBigAdapter.java  IModelBigAdapter.java  IPresenterBigAdapter.java  IViewBigAdapter.java  ModelBigAdapter.java  PresenterBigAdapter.java
UV2/app/src/main/java/com/example/uv2/cutvideo/: CutActivity.java  FileHelper.java  IModelCut.java  IPresenterCut.java  IViewCut.java  ModelCut.java  PresenterCut.java  model.ass
UV2/app/src/main/java/com/example/uv2/largeadapter/: IFinishLarge.java  IModelLarge.java  IPresenterLarge.java  IViewLarge.java  LargeAdapter.java  ModelLarge.java  PresenterLarge.java
UV2/app/src/main/java/com/example/uv2/mainactivity/: IModelMain.java  IPresenterMain.java  IViewMain.java  MainActivity.java  ModelMain.java  PresenterMain.java
UV2/app/src/main/java/com/example/uv2/setting/: IFinishSettingListener.java  IModelSetting.java  IPresenterSetting.java  IViewSettingActivity.java  ModelSetting.java  Setting.java  SettingActivity.java  SettingPresenter.java
UV2/app/src/main/java/com/example/uv2/showfull/: ShowFull.java
UV2/app/src/main/java/com/example/uv2/showvideo/: ShowVideo.java
UV2/app/src/main/java/com/example/uv2/tagvideo/: TagVideo.java
UV2/app/src/main/res/drawable/: ic_heart.xml  shape.xml
UV2/app/src/main/res/layout/: activity_cut.xml  activity_main.xml  activity_setting.xml  activity_show_full.xml  activity_show_video.xml  activity_tag_video.xml  alert_dialog.xml  biggest.xml  dialog_cut.xml  dialog_pwd.xml  item_dome.xml  item_pwd.xml
UV2/app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
UV2/app/src/main/res/values-night/: themes.xml
UV2/app/src/test/java/com/example/uv2/: ExampleUnitTest.java
UV2/gradle/wrapper/: gradle-wrapper.properties
